parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> programa
Rule 2     programa -> programa sentencia
Rule 3     programa -> sentencia
Rule 4     sentencia -> asignacion PUNTO_Y_COMA
Rule 5     sentencia -> iteracion
Rule 6     sentencia -> seleccion
Rule 7     sentencia -> bloque_declaracion
Rule 8     sentencia -> read PUNTO_Y_COMA
Rule 9     sentencia -> write PUNTO_Y_COMA
Rule 10    read -> READ A_PARENTESIS elemento C_PARENTESIS
Rule 11    write -> WRITE A_PARENTESIS elemento C_PARENTESIS
Rule 12    bloque_declaracion -> INIT A_LLAVE declaraciones C_LLAVE
Rule 13    declaraciones -> declaraciones declaracion
Rule 14    declaraciones -> declaracion
Rule 15    declaracion -> lista_variables DOS_PUNTOS tipo_dato PUNTO_Y_COMA
Rule 16    lista_variables -> VARIABLE
Rule 17    lista_variables -> lista_variables COMA VARIABLE
Rule 18    tipo_dato -> FLOAT
Rule 19    tipo_dato -> INT
Rule 20    tipo_dato -> STR
Rule 21    tipo_dato -> BIN
Rule 22    seleccion -> IF A_PARENTESIS condicion C_PARENTESIS bloque
Rule 23    seleccion -> IF A_PARENTESIS condicion C_PARENTESIS bloque bandera_else ELSE bloque
Rule 24    bandera_else -> <empty>
Rule 25    iteracion -> WHILE A_PARENTESIS condicion C_PARENTESIS bloque
Rule 26    condicion -> comparacion bandera_or OR comparacion
Rule 27    condicion -> comparacion AND comparacion
Rule 28    condicion -> NOT bandera_not comparacion
Rule 29    condicion -> comparacion
Rule 30    bandera_or -> <empty>
Rule 31    bandera_not -> <empty>
Rule 32    comparacion -> expresion comparador expresion
Rule 33    comparacion -> expresion
Rule 34    comparador -> MENORI
Rule 35    comparador -> MENORQ
Rule 36    comparador -> MAYORQ
Rule 37    comparador -> MAYORI
Rule 38    comparador -> IGUALI
Rule 39    comparador -> DISTINTOQ
Rule 40    bloque -> A_LLAVE programa C_LLAVE
Rule 41    asignacion -> VARIABLE ASIGNACION expresion
Rule 42    sumar_los_ultimos -> SUMAR_LOS_ULTIMOS A_PARENTESIS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
Rule 43    sumar_los_ultimos -> SUMAR_LOS_ULTIMOS A_PARENTESIS MENOS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
Rule 44    contar_binarios -> CONTAR_BINARIOS A_PARENTESIS lista C_PARENTESIS
Rule 45    lista -> A_CORCHETE elementos C_CORCHETE
Rule 46    lista -> A_CORCHETE C_CORCHETE
Rule 47    expresion -> expresion MAS termino
Rule 48    expresion -> MENOS expresion
Rule 49    expresion -> expresion MENOS termino
Rule 50    expresion -> termino
Rule 51    termino -> termino MULTIPLICACION elemento
Rule 52    termino -> termino DIVISION elemento
Rule 53    termino -> elemento
Rule 54    elemento -> A_PARENTESIS expresion C_PARENTESIS
Rule 55    elementos -> elementos COMA elemento
Rule 56    elementos -> elemento
Rule 57    elemento -> N_ENTERO
Rule 58    elemento -> N_DECIMAL
Rule 59    elemento -> N_BINARIO
Rule 60    elemento -> VARIABLE
Rule 61    elemento -> CADENA
Rule 62    elemento -> sumar_los_ultimos
Rule 63    elemento -> contar_binarios

Terminals, with rules where they appear

AND                  : 27
ASIGNACION           : 41
A_CORCHETE           : 45 46
A_LLAVE              : 12 40
A_PARENTESIS         : 10 11 22 23 25 42 43 44 54
BIN                  : 21
CADENA               : 61
COMA                 : 17 55
CONTAR_BINARIOS      : 44
C_CORCHETE           : 45 46
C_LLAVE              : 12 40
C_PARENTESIS         : 10 11 22 23 25 42 43 44 54
DISTINTOQ            : 39
DIVISION             : 52
DOS_PUNTOS           : 15
ELSE                 : 23
FLOAT                : 18
IF                   : 22 23
IGUALI               : 38
INIT                 : 12
INT                  : 19
MAS                  : 47
MAYORI               : 37
MAYORQ               : 36
MENORI               : 34
MENORQ               : 35
MENOS                : 43 48 49
MULTIPLICACION       : 51
NOT                  : 28
N_BINARIO            : 59
N_DECIMAL            : 58
N_ENTERO             : 42 43 57
OR                   : 26
PUNTO_Y_COMA         : 4 8 9 15 42 43
READ                 : 10
STR                  : 20
SUMAR_LOS_ULTIMOS    : 42 43
VARIABLE             : 16 17 41 60
WHILE                : 25
WRITE                : 11
error                : 

Nonterminals, with rules where they appear

asignacion           : 4
bandera_else         : 23
bandera_not          : 28
bandera_or           : 26
bloque               : 22 23 23 25
bloque_declaracion   : 7
comparacion          : 26 26 27 27 28 29
comparador           : 32
condicion            : 22 23 25
contar_binarios      : 63
declaracion          : 13 14
declaraciones        : 12 13
elemento             : 10 11 51 52 53 55 56
elementos            : 45 55
expresion            : 32 32 33 41 47 48 49 54
iteracion            : 5
lista                : 42 43 44
lista_variables      : 15 17
programa             : 1 2 40
read                 : 8
seleccion            : 6
sentencia            : 2 3
start                : 0
sumar_los_ultimos    : 62
termino              : 47 49 50 51 52
tipo_dato            : 15
write                : 9

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . programa
    (2) programa -> . programa sentencia
    (3) programa -> . sentencia
    (4) sentencia -> . asignacion PUNTO_Y_COMA
    (5) sentencia -> . iteracion
    (6) sentencia -> . seleccion
    (7) sentencia -> . bloque_declaracion
    (8) sentencia -> . read PUNTO_Y_COMA
    (9) sentencia -> . write PUNTO_Y_COMA
    (41) asignacion -> . VARIABLE ASIGNACION expresion
    (25) iteracion -> . WHILE A_PARENTESIS condicion C_PARENTESIS bloque
    (22) seleccion -> . IF A_PARENTESIS condicion C_PARENTESIS bloque
    (23) seleccion -> . IF A_PARENTESIS condicion C_PARENTESIS bloque bandera_else ELSE bloque
    (12) bloque_declaracion -> . INIT A_LLAVE declaraciones C_LLAVE
    (10) read -> . READ A_PARENTESIS elemento C_PARENTESIS
    (11) write -> . WRITE A_PARENTESIS elemento C_PARENTESIS

    VARIABLE        shift and go to state 10
    WHILE           shift and go to state 11
    IF              shift and go to state 12
    INIT            shift and go to state 13
    READ            shift and go to state 14
    WRITE           shift and go to state 15

    start                          shift and go to state 1
    programa                       shift and go to state 2
    sentencia                      shift and go to state 3
    asignacion                     shift and go to state 4
    iteracion                      shift and go to state 5
    seleccion                      shift and go to state 6
    bloque_declaracion             shift and go to state 7
    read                           shift and go to state 8
    write                          shift and go to state 9

state 1

    (0) S' -> start .



state 2

    (1) start -> programa .
    (2) programa -> programa . sentencia
    (4) sentencia -> . asignacion PUNTO_Y_COMA
    (5) sentencia -> . iteracion
    (6) sentencia -> . seleccion
    (7) sentencia -> . bloque_declaracion
    (8) sentencia -> . read PUNTO_Y_COMA
    (9) sentencia -> . write PUNTO_Y_COMA
    (41) asignacion -> . VARIABLE ASIGNACION expresion
    (25) iteracion -> . WHILE A_PARENTESIS condicion C_PARENTESIS bloque
    (22) seleccion -> . IF A_PARENTESIS condicion C_PARENTESIS bloque
    (23) seleccion -> . IF A_PARENTESIS condicion C_PARENTESIS bloque bandera_else ELSE bloque
    (12) bloque_declaracion -> . INIT A_LLAVE declaraciones C_LLAVE
    (10) read -> . READ A_PARENTESIS elemento C_PARENTESIS
    (11) write -> . WRITE A_PARENTESIS elemento C_PARENTESIS

    $end            reduce using rule 1 (start -> programa .)
    VARIABLE        shift and go to state 10
    WHILE           shift and go to state 11
    IF              shift and go to state 12
    INIT            shift and go to state 13
    READ            shift and go to state 14
    WRITE           shift and go to state 15

    sentencia                      shift and go to state 16
    asignacion                     shift and go to state 4
    iteracion                      shift and go to state 5
    seleccion                      shift and go to state 6
    bloque_declaracion             shift and go to state 7
    read                           shift and go to state 8
    write                          shift and go to state 9

state 3

    (3) programa -> sentencia .

    VARIABLE        reduce using rule 3 (programa -> sentencia .)
    WHILE           reduce using rule 3 (programa -> sentencia .)
    IF              reduce using rule 3 (programa -> sentencia .)
    INIT            reduce using rule 3 (programa -> sentencia .)
    READ            reduce using rule 3 (programa -> sentencia .)
    WRITE           reduce using rule 3 (programa -> sentencia .)
    $end            reduce using rule 3 (programa -> sentencia .)
    C_LLAVE         reduce using rule 3 (programa -> sentencia .)


state 4

    (4) sentencia -> asignacion . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 17


state 5

    (5) sentencia -> iteracion .

    VARIABLE        reduce using rule 5 (sentencia -> iteracion .)
    WHILE           reduce using rule 5 (sentencia -> iteracion .)
    IF              reduce using rule 5 (sentencia -> iteracion .)
    INIT            reduce using rule 5 (sentencia -> iteracion .)
    READ            reduce using rule 5 (sentencia -> iteracion .)
    WRITE           reduce using rule 5 (sentencia -> iteracion .)
    $end            reduce using rule 5 (sentencia -> iteracion .)
    C_LLAVE         reduce using rule 5 (sentencia -> iteracion .)


state 6

    (6) sentencia -> seleccion .

    VARIABLE        reduce using rule 6 (sentencia -> seleccion .)
    WHILE           reduce using rule 6 (sentencia -> seleccion .)
    IF              reduce using rule 6 (sentencia -> seleccion .)
    INIT            reduce using rule 6 (sentencia -> seleccion .)
    READ            reduce using rule 6 (sentencia -> seleccion .)
    WRITE           reduce using rule 6 (sentencia -> seleccion .)
    $end            reduce using rule 6 (sentencia -> seleccion .)
    C_LLAVE         reduce using rule 6 (sentencia -> seleccion .)


state 7

    (7) sentencia -> bloque_declaracion .

    VARIABLE        reduce using rule 7 (sentencia -> bloque_declaracion .)
    WHILE           reduce using rule 7 (sentencia -> bloque_declaracion .)
    IF              reduce using rule 7 (sentencia -> bloque_declaracion .)
    INIT            reduce using rule 7 (sentencia -> bloque_declaracion .)
    READ            reduce using rule 7 (sentencia -> bloque_declaracion .)
    WRITE           reduce using rule 7 (sentencia -> bloque_declaracion .)
    $end            reduce using rule 7 (sentencia -> bloque_declaracion .)
    C_LLAVE         reduce using rule 7 (sentencia -> bloque_declaracion .)


state 8

    (8) sentencia -> read . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 18


state 9

    (9) sentencia -> write . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 19


state 10

    (41) asignacion -> VARIABLE . ASIGNACION expresion

    ASIGNACION      shift and go to state 20


state 11

    (25) iteracion -> WHILE . A_PARENTESIS condicion C_PARENTESIS bloque

    A_PARENTESIS    shift and go to state 21


state 12

    (22) seleccion -> IF . A_PARENTESIS condicion C_PARENTESIS bloque
    (23) seleccion -> IF . A_PARENTESIS condicion C_PARENTESIS bloque bandera_else ELSE bloque

    A_PARENTESIS    shift and go to state 22


state 13

    (12) bloque_declaracion -> INIT . A_LLAVE declaraciones C_LLAVE

    A_LLAVE         shift and go to state 23


state 14

    (10) read -> READ . A_PARENTESIS elemento C_PARENTESIS

    A_PARENTESIS    shift and go to state 24


state 15

    (11) write -> WRITE . A_PARENTESIS elemento C_PARENTESIS

    A_PARENTESIS    shift and go to state 25


state 16

    (2) programa -> programa sentencia .

    VARIABLE        reduce using rule 2 (programa -> programa sentencia .)
    WHILE           reduce using rule 2 (programa -> programa sentencia .)
    IF              reduce using rule 2 (programa -> programa sentencia .)
    INIT            reduce using rule 2 (programa -> programa sentencia .)
    READ            reduce using rule 2 (programa -> programa sentencia .)
    WRITE           reduce using rule 2 (programa -> programa sentencia .)
    $end            reduce using rule 2 (programa -> programa sentencia .)
    C_LLAVE         reduce using rule 2 (programa -> programa sentencia .)


state 17

    (4) sentencia -> asignacion PUNTO_Y_COMA .

    VARIABLE        reduce using rule 4 (sentencia -> asignacion PUNTO_Y_COMA .)
    WHILE           reduce using rule 4 (sentencia -> asignacion PUNTO_Y_COMA .)
    IF              reduce using rule 4 (sentencia -> asignacion PUNTO_Y_COMA .)
    INIT            reduce using rule 4 (sentencia -> asignacion PUNTO_Y_COMA .)
    READ            reduce using rule 4 (sentencia -> asignacion PUNTO_Y_COMA .)
    WRITE           reduce using rule 4 (sentencia -> asignacion PUNTO_Y_COMA .)
    $end            reduce using rule 4 (sentencia -> asignacion PUNTO_Y_COMA .)
    C_LLAVE         reduce using rule 4 (sentencia -> asignacion PUNTO_Y_COMA .)


state 18

    (8) sentencia -> read PUNTO_Y_COMA .

    VARIABLE        reduce using rule 8 (sentencia -> read PUNTO_Y_COMA .)
    WHILE           reduce using rule 8 (sentencia -> read PUNTO_Y_COMA .)
    IF              reduce using rule 8 (sentencia -> read PUNTO_Y_COMA .)
    INIT            reduce using rule 8 (sentencia -> read PUNTO_Y_COMA .)
    READ            reduce using rule 8 (sentencia -> read PUNTO_Y_COMA .)
    WRITE           reduce using rule 8 (sentencia -> read PUNTO_Y_COMA .)
    $end            reduce using rule 8 (sentencia -> read PUNTO_Y_COMA .)
    C_LLAVE         reduce using rule 8 (sentencia -> read PUNTO_Y_COMA .)


state 19

    (9) sentencia -> write PUNTO_Y_COMA .

    VARIABLE        reduce using rule 9 (sentencia -> write PUNTO_Y_COMA .)
    WHILE           reduce using rule 9 (sentencia -> write PUNTO_Y_COMA .)
    IF              reduce using rule 9 (sentencia -> write PUNTO_Y_COMA .)
    INIT            reduce using rule 9 (sentencia -> write PUNTO_Y_COMA .)
    READ            reduce using rule 9 (sentencia -> write PUNTO_Y_COMA .)
    WRITE           reduce using rule 9 (sentencia -> write PUNTO_Y_COMA .)
    $end            reduce using rule 9 (sentencia -> write PUNTO_Y_COMA .)
    C_LLAVE         reduce using rule 9 (sentencia -> write PUNTO_Y_COMA .)


state 20

    (41) asignacion -> VARIABLE ASIGNACION . expresion
    (47) expresion -> . expresion MAS termino
    (48) expresion -> . MENOS expresion
    (49) expresion -> . expresion MENOS termino
    (50) expresion -> . termino
    (51) termino -> . termino MULTIPLICACION elemento
    (52) termino -> . termino DIVISION elemento
    (53) termino -> . elemento
    (54) elemento -> . A_PARENTESIS expresion C_PARENTESIS
    (57) elemento -> . N_ENTERO
    (58) elemento -> . N_DECIMAL
    (59) elemento -> . N_BINARIO
    (60) elemento -> . VARIABLE
    (61) elemento -> . CADENA
    (62) elemento -> . sumar_los_ultimos
    (63) elemento -> . contar_binarios
    (42) sumar_los_ultimos -> . SUMAR_LOS_ULTIMOS A_PARENTESIS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
    (43) sumar_los_ultimos -> . SUMAR_LOS_ULTIMOS A_PARENTESIS MENOS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
    (44) contar_binarios -> . CONTAR_BINARIOS A_PARENTESIS lista C_PARENTESIS

    MENOS           shift and go to state 29
    A_PARENTESIS    shift and go to state 31
    N_ENTERO        shift and go to state 32
    N_DECIMAL       shift and go to state 33
    N_BINARIO       shift and go to state 34
    VARIABLE        shift and go to state 26
    CADENA          shift and go to state 35
    SUMAR_LOS_ULTIMOS shift and go to state 38
    CONTAR_BINARIOS shift and go to state 39

    expresion                      shift and go to state 27
    termino                        shift and go to state 28
    elemento                       shift and go to state 30
    sumar_los_ultimos              shift and go to state 36
    contar_binarios                shift and go to state 37

state 21

    (25) iteracion -> WHILE A_PARENTESIS . condicion C_PARENTESIS bloque
    (26) condicion -> . comparacion bandera_or OR comparacion
    (27) condicion -> . comparacion AND comparacion
    (28) condicion -> . NOT bandera_not comparacion
    (29) condicion -> . comparacion
    (32) comparacion -> . expresion comparador expresion
    (33) comparacion -> . expresion
    (47) expresion -> . expresion MAS termino
    (48) expresion -> . MENOS expresion
    (49) expresion -> . expresion MENOS termino
    (50) expresion -> . termino
    (51) termino -> . termino MULTIPLICACION elemento
    (52) termino -> . termino DIVISION elemento
    (53) termino -> . elemento
    (54) elemento -> . A_PARENTESIS expresion C_PARENTESIS
    (57) elemento -> . N_ENTERO
    (58) elemento -> . N_DECIMAL
    (59) elemento -> . N_BINARIO
    (60) elemento -> . VARIABLE
    (61) elemento -> . CADENA
    (62) elemento -> . sumar_los_ultimos
    (63) elemento -> . contar_binarios
    (42) sumar_los_ultimos -> . SUMAR_LOS_ULTIMOS A_PARENTESIS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
    (43) sumar_los_ultimos -> . SUMAR_LOS_ULTIMOS A_PARENTESIS MENOS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
    (44) contar_binarios -> . CONTAR_BINARIOS A_PARENTESIS lista C_PARENTESIS

    NOT             shift and go to state 42
    MENOS           shift and go to state 29
    A_PARENTESIS    shift and go to state 31
    N_ENTERO        shift and go to state 32
    N_DECIMAL       shift and go to state 33
    N_BINARIO       shift and go to state 34
    VARIABLE        shift and go to state 26
    CADENA          shift and go to state 35
    SUMAR_LOS_ULTIMOS shift and go to state 38
    CONTAR_BINARIOS shift and go to state 39

    condicion                      shift and go to state 40
    comparacion                    shift and go to state 41
    expresion                      shift and go to state 43
    termino                        shift and go to state 28
    elemento                       shift and go to state 30
    sumar_los_ultimos              shift and go to state 36
    contar_binarios                shift and go to state 37

state 22

    (22) seleccion -> IF A_PARENTESIS . condicion C_PARENTESIS bloque
    (23) seleccion -> IF A_PARENTESIS . condicion C_PARENTESIS bloque bandera_else ELSE bloque
    (26) condicion -> . comparacion bandera_or OR comparacion
    (27) condicion -> . comparacion AND comparacion
    (28) condicion -> . NOT bandera_not comparacion
    (29) condicion -> . comparacion
    (32) comparacion -> . expresion comparador expresion
    (33) comparacion -> . expresion
    (47) expresion -> . expresion MAS termino
    (48) expresion -> . MENOS expresion
    (49) expresion -> . expresion MENOS termino
    (50) expresion -> . termino
    (51) termino -> . termino MULTIPLICACION elemento
    (52) termino -> . termino DIVISION elemento
    (53) termino -> . elemento
    (54) elemento -> . A_PARENTESIS expresion C_PARENTESIS
    (57) elemento -> . N_ENTERO
    (58) elemento -> . N_DECIMAL
    (59) elemento -> . N_BINARIO
    (60) elemento -> . VARIABLE
    (61) elemento -> . CADENA
    (62) elemento -> . sumar_los_ultimos
    (63) elemento -> . contar_binarios
    (42) sumar_los_ultimos -> . SUMAR_LOS_ULTIMOS A_PARENTESIS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
    (43) sumar_los_ultimos -> . SUMAR_LOS_ULTIMOS A_PARENTESIS MENOS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
    (44) contar_binarios -> . CONTAR_BINARIOS A_PARENTESIS lista C_PARENTESIS

    NOT             shift and go to state 42
    MENOS           shift and go to state 29
    A_PARENTESIS    shift and go to state 31
    N_ENTERO        shift and go to state 32
    N_DECIMAL       shift and go to state 33
    N_BINARIO       shift and go to state 34
    VARIABLE        shift and go to state 26
    CADENA          shift and go to state 35
    SUMAR_LOS_ULTIMOS shift and go to state 38
    CONTAR_BINARIOS shift and go to state 39

    condicion                      shift and go to state 44
    comparacion                    shift and go to state 41
    expresion                      shift and go to state 43
    termino                        shift and go to state 28
    elemento                       shift and go to state 30
    sumar_los_ultimos              shift and go to state 36
    contar_binarios                shift and go to state 37

state 23

    (12) bloque_declaracion -> INIT A_LLAVE . declaraciones C_LLAVE
    (13) declaraciones -> . declaraciones declaracion
    (14) declaraciones -> . declaracion
    (15) declaracion -> . lista_variables DOS_PUNTOS tipo_dato PUNTO_Y_COMA
    (16) lista_variables -> . VARIABLE
    (17) lista_variables -> . lista_variables COMA VARIABLE

    VARIABLE        shift and go to state 48

    declaraciones                  shift and go to state 45
    declaracion                    shift and go to state 46
    lista_variables                shift and go to state 47

state 24

    (10) read -> READ A_PARENTESIS . elemento C_PARENTESIS
    (54) elemento -> . A_PARENTESIS expresion C_PARENTESIS
    (57) elemento -> . N_ENTERO
    (58) elemento -> . N_DECIMAL
    (59) elemento -> . N_BINARIO
    (60) elemento -> . VARIABLE
    (61) elemento -> . CADENA
    (62) elemento -> . sumar_los_ultimos
    (63) elemento -> . contar_binarios
    (42) sumar_los_ultimos -> . SUMAR_LOS_ULTIMOS A_PARENTESIS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
    (43) sumar_los_ultimos -> . SUMAR_LOS_ULTIMOS A_PARENTESIS MENOS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
    (44) contar_binarios -> . CONTAR_BINARIOS A_PARENTESIS lista C_PARENTESIS

    A_PARENTESIS    shift and go to state 31
    N_ENTERO        shift and go to state 32
    N_DECIMAL       shift and go to state 33
    N_BINARIO       shift and go to state 34
    VARIABLE        shift and go to state 26
    CADENA          shift and go to state 35
    SUMAR_LOS_ULTIMOS shift and go to state 38
    CONTAR_BINARIOS shift and go to state 39

    elemento                       shift and go to state 49
    sumar_los_ultimos              shift and go to state 36
    contar_binarios                shift and go to state 37

state 25

    (11) write -> WRITE A_PARENTESIS . elemento C_PARENTESIS
    (54) elemento -> . A_PARENTESIS expresion C_PARENTESIS
    (57) elemento -> . N_ENTERO
    (58) elemento -> . N_DECIMAL
    (59) elemento -> . N_BINARIO
    (60) elemento -> . VARIABLE
    (61) elemento -> . CADENA
    (62) elemento -> . sumar_los_ultimos
    (63) elemento -> . contar_binarios
    (42) sumar_los_ultimos -> . SUMAR_LOS_ULTIMOS A_PARENTESIS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
    (43) sumar_los_ultimos -> . SUMAR_LOS_ULTIMOS A_PARENTESIS MENOS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
    (44) contar_binarios -> . CONTAR_BINARIOS A_PARENTESIS lista C_PARENTESIS

    A_PARENTESIS    shift and go to state 31
    N_ENTERO        shift and go to state 32
    N_DECIMAL       shift and go to state 33
    N_BINARIO       shift and go to state 34
    VARIABLE        shift and go to state 26
    CADENA          shift and go to state 35
    SUMAR_LOS_ULTIMOS shift and go to state 38
    CONTAR_BINARIOS shift and go to state 39

    elemento                       shift and go to state 50
    sumar_los_ultimos              shift and go to state 36
    contar_binarios                shift and go to state 37

state 26

    (60) elemento -> VARIABLE .

    MULTIPLICACION  reduce using rule 60 (elemento -> VARIABLE .)
    DIVISION        reduce using rule 60 (elemento -> VARIABLE .)
    MAS             reduce using rule 60 (elemento -> VARIABLE .)
    MENOS           reduce using rule 60 (elemento -> VARIABLE .)
    PUNTO_Y_COMA    reduce using rule 60 (elemento -> VARIABLE .)
    MENORI          reduce using rule 60 (elemento -> VARIABLE .)
    MENORQ          reduce using rule 60 (elemento -> VARIABLE .)
    MAYORQ          reduce using rule 60 (elemento -> VARIABLE .)
    MAYORI          reduce using rule 60 (elemento -> VARIABLE .)
    IGUALI          reduce using rule 60 (elemento -> VARIABLE .)
    DISTINTOQ       reduce using rule 60 (elemento -> VARIABLE .)
    AND             reduce using rule 60 (elemento -> VARIABLE .)
    OR              reduce using rule 60 (elemento -> VARIABLE .)
    C_PARENTESIS    reduce using rule 60 (elemento -> VARIABLE .)
    C_CORCHETE      reduce using rule 60 (elemento -> VARIABLE .)
    COMA            reduce using rule 60 (elemento -> VARIABLE .)


state 27

    (41) asignacion -> VARIABLE ASIGNACION expresion .
    (47) expresion -> expresion . MAS termino
    (49) expresion -> expresion . MENOS termino

    PUNTO_Y_COMA    reduce using rule 41 (asignacion -> VARIABLE ASIGNACION expresion .)
    MAS             shift and go to state 51
    MENOS           shift and go to state 52


state 28

    (50) expresion -> termino .
    (51) termino -> termino . MULTIPLICACION elemento
    (52) termino -> termino . DIVISION elemento

    MAS             reduce using rule 50 (expresion -> termino .)
    MENOS           reduce using rule 50 (expresion -> termino .)
    PUNTO_Y_COMA    reduce using rule 50 (expresion -> termino .)
    MENORI          reduce using rule 50 (expresion -> termino .)
    MENORQ          reduce using rule 50 (expresion -> termino .)
    MAYORQ          reduce using rule 50 (expresion -> termino .)
    MAYORI          reduce using rule 50 (expresion -> termino .)
    IGUALI          reduce using rule 50 (expresion -> termino .)
    DISTINTOQ       reduce using rule 50 (expresion -> termino .)
    AND             reduce using rule 50 (expresion -> termino .)
    OR              reduce using rule 50 (expresion -> termino .)
    C_PARENTESIS    reduce using rule 50 (expresion -> termino .)
    MULTIPLICACION  shift and go to state 53
    DIVISION        shift and go to state 54


state 29

    (48) expresion -> MENOS . expresion
    (47) expresion -> . expresion MAS termino
    (48) expresion -> . MENOS expresion
    (49) expresion -> . expresion MENOS termino
    (50) expresion -> . termino
    (51) termino -> . termino MULTIPLICACION elemento
    (52) termino -> . termino DIVISION elemento
    (53) termino -> . elemento
    (54) elemento -> . A_PARENTESIS expresion C_PARENTESIS
    (57) elemento -> . N_ENTERO
    (58) elemento -> . N_DECIMAL
    (59) elemento -> . N_BINARIO
    (60) elemento -> . VARIABLE
    (61) elemento -> . CADENA
    (62) elemento -> . sumar_los_ultimos
    (63) elemento -> . contar_binarios
    (42) sumar_los_ultimos -> . SUMAR_LOS_ULTIMOS A_PARENTESIS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
    (43) sumar_los_ultimos -> . SUMAR_LOS_ULTIMOS A_PARENTESIS MENOS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
    (44) contar_binarios -> . CONTAR_BINARIOS A_PARENTESIS lista C_PARENTESIS

    MENOS           shift and go to state 29
    A_PARENTESIS    shift and go to state 31
    N_ENTERO        shift and go to state 32
    N_DECIMAL       shift and go to state 33
    N_BINARIO       shift and go to state 34
    VARIABLE        shift and go to state 26
    CADENA          shift and go to state 35
    SUMAR_LOS_ULTIMOS shift and go to state 38
    CONTAR_BINARIOS shift and go to state 39

    expresion                      shift and go to state 55
    termino                        shift and go to state 28
    elemento                       shift and go to state 30
    sumar_los_ultimos              shift and go to state 36
    contar_binarios                shift and go to state 37

state 30

    (53) termino -> elemento .

    MULTIPLICACION  reduce using rule 53 (termino -> elemento .)
    DIVISION        reduce using rule 53 (termino -> elemento .)
    MAS             reduce using rule 53 (termino -> elemento .)
    MENOS           reduce using rule 53 (termino -> elemento .)
    PUNTO_Y_COMA    reduce using rule 53 (termino -> elemento .)
    MENORI          reduce using rule 53 (termino -> elemento .)
    MENORQ          reduce using rule 53 (termino -> elemento .)
    MAYORQ          reduce using rule 53 (termino -> elemento .)
    MAYORI          reduce using rule 53 (termino -> elemento .)
    IGUALI          reduce using rule 53 (termino -> elemento .)
    DISTINTOQ       reduce using rule 53 (termino -> elemento .)
    AND             reduce using rule 53 (termino -> elemento .)
    OR              reduce using rule 53 (termino -> elemento .)
    C_PARENTESIS    reduce using rule 53 (termino -> elemento .)


state 31

    (54) elemento -> A_PARENTESIS . expresion C_PARENTESIS
    (47) expresion -> . expresion MAS termino
    (48) expresion -> . MENOS expresion
    (49) expresion -> . expresion MENOS termino
    (50) expresion -> . termino
    (51) termino -> . termino MULTIPLICACION elemento
    (52) termino -> . termino DIVISION elemento
    (53) termino -> . elemento
    (54) elemento -> . A_PARENTESIS expresion C_PARENTESIS
    (57) elemento -> . N_ENTERO
    (58) elemento -> . N_DECIMAL
    (59) elemento -> . N_BINARIO
    (60) elemento -> . VARIABLE
    (61) elemento -> . CADENA
    (62) elemento -> . sumar_los_ultimos
    (63) elemento -> . contar_binarios
    (42) sumar_los_ultimos -> . SUMAR_LOS_ULTIMOS A_PARENTESIS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
    (43) sumar_los_ultimos -> . SUMAR_LOS_ULTIMOS A_PARENTESIS MENOS N_ENTERO PUNTO_Y_COMA lista C_PARENTESIS
    (44) contar_binarios -> . CONTAR_BINARIOS A_PARENTESIS lista C_PARENTESIS

    MENOS           shift and go to state 29
    A_PARENTESIS    shift and go to state 31
    N_ENTERO        shift and go to state 32
    N_DECIMAL       shift and go to state 33
    N_BINARIO       shift and go to state 34
    VARIABLE        shift and go to state 26
    CADENA          shift and go to state 35
    SUMAR_LOS_ULTIMOS shift and go to state 38
    CONTAR_BINARIOS shift and go to state 39

    expresion                      shift and go to state 56
    termino                        shift and go to state 28
    elemento                       shift and go to state 30
    sumar_los_ultimos              shift and go to state 36
    contar_binarios                shift and go to state 37

state 32

    (57) elemento -> N_ENTERO .

    MULTIPLICACION  reduce using rule 57 (elemento -> N_ENTERO .)
    DIVISION        reduce using rule 57 (elemento -> N_ENTERO .)
    MAS             reduce using rule 57 (elemento -> N_ENTERO .)
    MENOS           reduce using rule 57 (elemento -> N_ENTERO .)
    PUNTO_Y_COMA    reduce using rule 57 (elemento -> N_ENTERO .)
    MENORI          reduce using rule 57 (elemento -> N_ENTERO .)
    MENORQ          reduce using rule 57 (elemento -> N_ENTERO .)
    MAYORQ          reduce using rule 57 (elemento -> N_ENTERO .)
    MAYORI          reduce using rule 57 (elemento -> N_ENTERO .)
    IGUALI          reduce using rule 57 (elemento -> N_ENTERO .)
    DISTINTOQ       reduce using rule 57 (elemento -> N_ENTERO .)
    AND             reduce using rule 57 (elemento -> N_ENTERO .)
    OR              reduce using rule 57 (elemento -> N_ENTERO .)
    C_PARENTESIS    reduce using rule 57 (elemento -> N_ENTERO .)
    C_CORCHETE      reduce using rule 57 (elemento -> N_ENTERO .)
    COMA            reduce using rule 57 (elemento -> N_ENTERO .)


state 33

    (58) elemento -> N_DECIMAL .
